ps-node-ip/ps-application.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planespotter-frontend
  namespace: planespotter
  labels:
    app: planespotter-frontend
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: planespotter-frontend
  template:
    metadata:
      labels:
        app: planespotter-frontend
        tier: frontend
    spec:
      containers:
      - name: planespotter-fe
        image: yfauser/planespotter-frontend:d0b30abec8bfdbde01a36d07b30b2a3802d9ccbb
        imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planespotter-app
  labels:
    app: planespotter
    tier: app-tier
spec:
  replicas: 2
  selector:
    matchLabels:
      app: planespotter-app
  template:
    metadata:
      labels:
        app: planespotter-app
    spec:
      containers:
      - name: planespotter
        image: yfauser/planespotter-app-server:1508888202fc85246248c0892c0d27dda34de8e1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
      volumes:
        - name: config-volume
          configMap:
            name: planespotter-app-cfg
---
apiVersion: v1
kind: Service
metadata:
  name: planespotter-svc
  labels:
    app: planespotter-svc
spec:
  ports:
    - port: 80
  selector:
    app: planespotter-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-server
  namespace: planespotter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-server
      tier: backend
  template:
    metadata:
      labels:
        app: redis-server
        tier: backend
    spec:
      containers:
      - name: redis-server
        image: redis
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-server
  namespace: planespotter
  labels:
    app: redis-server
    tier: backend
spec:
  ports:
  - port: 6379
  selector:
    app: redis-server
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adsb-sync
  namespace: planespotter
  labels:
    app: adsb-sync
    tier: data-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adsb-sync
  template:
    metadata:
      labels:
        app: adsb-sync
    spec:
      containers:
      - name: adsb-sync
        image: yfauser/adsb-sync:1d791ea6e96eb50adb15e773d1d783f511618c97
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config-volume
          mountPath: /usr/src/app/config
      volumes:
        - name: config-volume
          configMap:
            name: adsb-sync-cfg
