ps-node-ip/ps-loadbalancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: planespotter-lb-frontend
  namespace: planespotter
  labels:
    app: planespotter-lb-frontend
spec:
  type: LoadBalancer
  selector:
    app: planespotter-frontend
  ports:
    - port: 80
