ps-node-ip/ps-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: planespotter-frontend
  namespace: planespotter
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: "planespotter.lab02"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: planespotter-frontend
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: planespotter-frontend
  namespace: planespotter
  labels:
    app: planespotter-frontend
spec:
  selector:
    app: planespotter-frontend
  ports:
    - port: 80
