ps-node-ip/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-to-db
  namespace: planespotter
spec:
  podSelector:
    matchLabels:
      app: planespotter-app
  policyTypes:
  - Egress
  egress:
    - to:
      - ipBlock:
          cidr: 172.20.21.10/32
      ports:
      - protocol: TCP
        port: 3306
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-to-picture
  namespace: planespotter
spec:
  podSelector:
    matchLabels:
      app: planespotter-app
  policyTypes:
  - Egress
  egress:
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
      - protocol: TCP
        port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-to-position
  namespace: planespotter
spec:
  podSelector:
    matchLabels:
      app: planespotter-app
  policyTypes:
  - Egress
  egress:
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
      - protocol: TCP
        port: 443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: permit-dns
  namespace: planespotter
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
    to:
    - namespaceSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: permit-self
  namespace: planespotter
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  ingress:
    - from:
      - podSelector: {}
  egress:
    - to:
      - podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: external-to-frontend
  namespace: planespotter
spec:
  podSelector:
    matchLabels:
      app: planespotter-frontend
  policyTypes:
  - Ingress
  ingress:
    - ports:
      - protocol: TCP
        port: 80
